@@ -68,6 +68,7 @@ Misc:
  - Debugger: Add functions for read- or write-only watchpoints
  - GB Memory: Reset ROM bank when loading a ROM
  - GBA DMA: Refactor DMA out of memory.c
+ - GBA DMA: Move DMAs to using absolute timing
 
 0.5.1: (2016-10-05)
 Bugfixes:
